<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">ZEGO Live</string>
    <string name="login_page_user_id">User ID</string>
    <string name="login_page_user_name">User name</string>
    <string name="login_page_login">Log In</string>
    <string name="toast_userid_login_fail">Please enter your user ID.</string>
    <string name="toast_user_id_error">User ID can only contain letters and numbers.</string>
    <string name="toast_login_fail">Failed to log in. Error code: %d.</string>
    <string name="toast_kickout_error">This account has already logged in from another device.</string>
    <string name="welcome_page_live_description">Make live streaming more fun and engaging with face beautification, voice beautification, music accompaniments, and many other audio and video effects.</string>
    <string name="welcome_page_get_more">Get More</string>
    <string name="welcome_page_sign_up">Sign Up</string>
    <string name="welcome_page_contact_us">Contact Us</string>
    <string name="room_list_page_none">No room online, \nplease create a live room~</string>
    <string name="room_list_page_create">Create Live</string>
    <string name="toast_room_existed">Failed to create room, because the room already exists.</string>
    <string name="toast_join_room_fail">Failed to join the room. Error code: %d.</string>
    <string name="create_page_room_name">Please enter the room name.</string>
    <string name="create_page_room_start">Go Live</string>
    <string name="toast_create_room_fail">Failed to create a room. Error code: %d.</string>
    <string name="toast_room_id_enter_error">Please enter the room ID.</string>
    <string name="toast_room_not_exist_fail">This room does not exist. Please check the room ID or create a new one.</string>
    <string name="toast_create_room_success">Room created successfully. Join the room now.</string>
    <string name="room_page_sound_effects_title">Music effects</string>
    <string name="room_sound_page_sound_background">Background</string>
    <string name="room_sound_page_joyful">Joyful</string>
    <string name="room_sound_page_romantic">Romantic</string>
    <string name="room_sound_page_music_volume">Music volume</string>
    <string name="room_sound_page_voice_volume">Voice volume</string>
    <string name="room_sound_page_lolita">Lolita</string>
    <string name="room_sound_page_robot">Robot</string>
    <string name="room_sound_page_empt">Empty</string>
    <string name="room_sound_page_ktv">KTV</string>
    <string name="room_sound_page_hall">Hall</string>
    <string name="room_sound_page_concert">Concert</string>
    <string name="room_sound_page_rock">Rock</string>
    <string name="room_sound_page_voice_changing">Voice Change</string>
    <string name="room_sound_page_reverb">Reverb</string>
    <string name="room_sound_page_audio_mixing">Audio mixing</string>
    <string name="room_sound_page_audio_enhancement">Audio enhancement</string>
    <string name="room_sound_page_sound_effects">Sound effects</string>
    <string name="room_sound_page_original_voice">Original voice</string>
    <string name="room_sound_page_none">Original</string>
    <string name="toast_room_applied_connection">You have applied for connection, please wait for the host’s confirmation!</string>
    <string name="toast_room_has_canceled_connection_apply">%s canceled to connect with you</string>
    <string name="toast_room_has_rejected">Host has rejected your request！</string>
    <string name="toast_room_maximum">A maximum of 3 viewers can connect with the host</string>
    <string name="toast_room_prohibited_connection">You have been prohibited the connection by the host</string>
    <string name="toast_room_muted_by_host">You have been muted by the host</string>
    <string name="toast_room_failed_to_operate">Failed to operate， please try it again</string>
    <string name="toast_room_ended_the_connection">%s has ended the connection</string>
    <string name="setting_page_settings">Settings</string>
    <string name="setting_page_sdk_version">Express SDK Version</string>
    <string name="setting_page_zim_sdk_version">ZIM SDK Version</string>
    <string name="setting_page_effect_sdk_version">Effect SDK Version</string>
    <string name="setting_page_version">APP Version</string>
    <string name="setting_page_upload_log">Upload logs</string>
    <string name="setting_page_logout">Log out</string>
    <string name="toast_upload_log_success">Logs uploaded successfully.</string>
    <string name="toast_upload_log_fail">Failed to upload logs. Error code: %d.</string>
    <string name="toast_logout_fail">Failed to log out. Error code: %s.</string>
    <string name="room_page_host">Host</string>
    <string name="room_page_apply_to_connect">Apply to connect</string>
    <string name="room_page_cancel_apply">Cancel apply</string>
    <string name="room_page_end_connect">End</string>
    <string name="room_page_mute">Mute</string>
    <string name="room_page_unmute">Unmute</string>
    <string name="room_page_prohibit_to_connect">Prohibit to connect</string>
    <string name="user_list_page_invited">Invited</string>
    <string name="user_list_page_conneted">Connected</string>
    <string name="user_list_page_host">Host</string>
    <string name="user_list_page_co_host">Co-host</string>
    <string name="user_list_page_me">Me</string>
    <string name="user_list_page_invite_to_speak">Invite the viewer to connect</string>
    <string name="toast_user_list_page_connected_failed">Failed to invite participant. Error code: %d.</string>
    <string name="toast_request_to_connect_fail">Failed to request connect. Error code: %d.</string>
    <string name="toast_cancel_request_to_connect_fail">Failed to cancel request connect. Error code: %d.</string>
    <string name="toast_take_seat_fail">Failed to take seat. Error code: %d.</string>
    <string name="toast_end_connect_fail">Failed to end connect. Error code: %d.</string>
    <string name="toast_operate_camera_fail">Failed to operate Camera. Error code: %d.</string>
    <string name="toast_operate_mic_fail">Failed to operate Mic. Error code: %d.</string>
    <string name="dialog_end_connect_title">End the Connection！</string>
    <string name="dialog_room_message_ended_the_connection">Would you end the connection with the host？</string>
    <string name="dialog_room_page_title_connection_request">Connection request!</string>
    <string name="dialog_room_page_message_connection_request">%s is requesting a connection with you. Do you agree?</string>
    <string name="dialog_invition_title">Invitation</string>
    <string name="dialog_invition_descrip">The host has invited you to connect.</string>
    <string name="toast_user_list_page_rejected_invitation">The Participant refuse to connect.</string>
    <string name="toast_request_connect_refuse">The Host refuse you to connect.</string>
    <string name="dialog_room_page_ok">OK</string>
    <string name="dialog_room_page_cancel">Cancel</string>
    <string name="dialog_room_page_disagree">Decline</string>
    <string name="dialog_room_page_agree">Accept</string>
    <string name="dialog_attetion_title">Attention!</string>
    <string name="dialog_close">Close</string>
    <string name="send_to_friend">Send to my friend</string>
    <string name="dialog_room_page_mic_cant_open">Cannot use microphone！</string>
    <string name="dialog_room_page_mic_permission">Please allow access to your microphone to continue.</string>
    <string name="dialog_room_page_go_to_settings">Go to Settings</string>
    <string name="dialog_room_page_title_cannot_use_camera">Cannot use Camera！</string>
    <string name="dialog_room_page_massage_cannot_use_camera">Please allow access to your camera to continue.</string>
    <string name="toast_room_page_permission_error">Failed to connect，please agree the access to microphone&amp;camera.</string>
    <string name="toast_room_page_mic_permission_error">Failed to connect. Please allow to access your microphone.</string>
    <string name="toast_room_page_camera_permission_error">Failed to connect. Please allow to access your camera.</string>
    <string name="room_tips_reconnect">You are disconnected from the room. Do you want to reconnect?</string>
    <string name="toast_disconnect_tips">You are disconnected from the room. Please join again.</string>
    <string name="room_page_mic_cant_open">The Mic is off.</string>
    <string name="room_page_grant_mic_permission">Please allow access to your microphone to continue.</string>
    <string name="room_page_go_to_settings">Go to Settings</string>
    <string name="room_page_cancel">Cancel</string>
    <string name="user_list_page_participants_num">Participants (%d)</string>
    <string name="room_page_invite_take_seat">Invite to speak</string>
    <string name="room_page_role_speaker">Speaker</string>
    <string name="room_page_role_owner">Owner</string>
    <string name="room_page_settings">Settings</string>
    <string name="room_page_leave_seat">Leave the seat</string>
    <string name="room_page_set_take_seat">Close all untaken speaker seats</string>
    <string name="room_page_set_silence">Disable text chat for all</string>
    <string name="room_page_has_left_the_room">left the room</string>
    <string name="room_page_joined_the_room">joined the room</string>
    <string name="toast_send_message_error">Failed to send message. Error code: %d.</string>
    <string name="room_page_send_message">Send</string>
    <string name="room_page_bands_send_message">The host has disabled text chat for everyone.</string>
    <string name="room_page_gift">Gifts</string>
    <string name="room_page_select_all_speakers">All speakers</string>
    <string name="room_page_gift_no_speaker">No other speakers</string>
    <string name="room_page_select_default">Choose a speaker</string>
    <string name="room_page_send_gift">Send</string>
    <string name="toast_send_gift_error">Failed to send gift. Error code: %d.</string>
    <string name="room_page_received_gift_tips">%s received HEART from %s</string>
    <string name="room_page_gift_heart">HEART</string>
    <string name="room_page_lock_seat">Close seat</string>
    <string name="room_page_unlock_seat">Open seat</string>
    <string name="mic_request">We need to use your mic to help you join the voice interaction.</string>
    <string name="toast_unlock_seat_fail">Failed to open the seat. Error code: %d.</string>
    <string name="toast_lock_seat_fail">Failed to close the seat. Error code: %d.</string>
    <string name="room_page_leave_speaker_seat">Leave seat</string>
    <string name="dialog_warning_leave_seat_message">Remove %s from the speaker seat?</string>
    <string name="toast_kickout_leave_seat_error">Failed to remove %s from the speaker seat. Error code: %d.</string>
    <string name="room_page_invitation_has_sent">Invitation sent.</string>
    <string name="room_page_no_more_seat_available">No speaker seats available at the moment. Please try again later.</string>
    <string name="toast_to_be_a_speaker_seat_fail">Failed to connect. Error code: %d.</string>
    <string name="room_page_take_seat">Take the seat</string>
    <string name="toast_take_speaker_seat_fail">Failed to take the speaker seat. Error code: %d.</string>
    <string name="the_wheat_position_has_been_locked">This seat has been closed.</string>
    <string name="dialog_sure_to_leave_seat">Are you sure to leave the seat?</string>
    <string name="toast_leave_seat_fail">Failed to leave the speaker seat. Error code: %d.</string>
    <string name="room_settings_page_video_resolution">Resolution Settings</string>
    <string name="room_settings_page_audio_bitrate">Audio bitrate</string>
    <string name="room_more_setting">Settings</string>
    <string name="room_more_flip">Flip</string>
    <string name="room_more_camera">Camera</string>
    <string name="room_more_mic">Mic</string>
</resources>