<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dark_fill_half_round_rectangle_bg">

    <View
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/dark_divider_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/room_more_setting"
        android:textColor="@color/white_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="26dp"
        android:paddingBottom="23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_setting">

        <im.zego.livedemo.feature.live.view.MoreSettingView
            android:id="@+id/setting_flip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:moreSettingName="@string/room_more_flip"
            app:moreSettingSrc="@drawable/setting_flip" />

        <im.zego.livedemo.feature.live.view.MoreSettingView
            android:id="@+id/setting_camera"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:moreSettingName="@string/room_more_camera"
            app:moreSettingSrc="@drawable/setting_cam_on" />

        <im.zego.livedemo.feature.live.view.MoreSettingView
            android:id="@+id/setting_mic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:moreSettingName="@string/room_more_mic"
            app:moreSettingSrc="@drawable/setting_mic_on" />

<!--        <im.zego.livedemo.feature.live.view.MoreSettingView-->
<!--            android:id="@+id/setting_data"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            app:moreSettingName="@string/room_page_more_data"-->
<!--            app:moreSettingSrc="@drawable/setting_data" />-->

        <im.zego.livedemo.feature.live.view.MoreSettingView
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:moreSettingName="@string/room_more_setting"
            app:moreSettingSrc="@drawable/setting_settings" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>